# evm-transaction-analyzer

./: .gitignore  README.md  asset_flow.dot  demo.py  main.py  pyproject.toml  test.py
utils/: basic_block.py  cfg_structure.py  cfg_transaction.py  evm_information.py  extract_token_changes.py  find_trace_opcode.py  render_cfg.py  render_legend.py  render_token_table.py  token_table.py
